tests/NormalTests/paczka1/fuzzy1/22632935.err
Error in line 3: KHi5v14A5v A651 34,4
Error in line 7: eqUMM6 A226 10,42
Error in line 4: Izlqbo A413 86,2
Error in line 26: KHi5v14A5v A413 71,7
Error in line 25: eqUMM6 A389 78,2
Error in line 36: ITUcM0D4LPN A389 4,3
